// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render ExpensesSummary with 1 expense 1`] = `
<div>
  <h2>
    Viewing 
    1
     
    expense
     
  </h2>
   
  <h3>
    Total: 
    $0.00
  </h3>
</div>
`;

exports[`should correctly render ExpensesSummary with 1 expense 2`] = `
<div>
  <h2>
    Viewing 
    23
     
    expenses
     
  </h2>
   
  <h3>
    Total: 
    $0.00
  </h3>
</div>
`;
